@startuml AI Radiology Platform
hide circle
skinparam shadowing true

skinparam title {
    FontName Segoe UI
    FontSize 20
    FontStyle bold
    FontColor #111827
    BorderColor transparent
    BackgroundColor transparent
}

title AI Radiology Platform

skinparam defaultFontName Segoe UI
skinparam defaultFontSize 13

skinparam class {
    BackgroundColor #F9FAFB
    BorderColor #4B5563
    FontColor #111827
    AttributeFontColor #1F2937
    HeaderFontColor #FFFFFF
    HeaderFontSize 14
    HeaderFontStyle bold
    RoundCorner 12
    BorderThickness 1.5
}

skinparam classAttributeIconSize 0
skinparam ArrowColor #4B5563
skinparam ArrowThickness 1.5
skinparam ArrowFontName Segoe UI
skinparam ArrowFontSize 11
skinparam ArrowFontColor #374151

left to right direction

' ── SQL Table ──
class User {
    + id           : Integer
    + username     : String
    + email        : String
    - password     : String
    + role         : Enum
    + phone        : String
    + first_name   : String
    + last_name    : String
    + created_at   : DateTime
    --
    + authenticate(password: String) : Boolean
    + manageProfile(new: String) : void
}

' ── Role Tables ──
class Role {
    + id           : Integer
    + name         : String
    + description  : String
    + created_at   : DateTime
    --
    + updateDetails(name: String, desc: String) : void
}

class UserRole {
    + id           : Integer
    + user_id      : Integer
    + role_id      : Integer
    + assigned_at  : DateTime
    + assigned_by  : Integer
    --
    + assign(user: User, role: Role) : void
    + revoke() : void
}

' ── User Specializations ──
class Admin {
    + user_id     : Integer
    + department  : String
}

Admin -|> User

' ── MongoDB Documents ──
class RadiologyImage {
    + id           : ObjectId
    + patient_name : String
    + patient      : ObjectId
    + modality     : Enum
    + file_path    : String
    + uploaded_by  : Integer
    + uploaded_at  : DateTime
    + status       : Enum
    --
    + upload(file: File) : void
    + validateFormat() : Boolean
    + updateStatus(status: Enum) : void
}

class AiPredictions {
    + id           : ObjectId
    + image_id     : ObjectId
    + model_name   : String
    + predictions  : Map<String, Float>
    + top_finding  : String
    + confidence   : Float
    + analyzed_at  : DateTime
    --
    + runInference(image: RadiologyImage) : void
}

class Diagnosis {
    + id              : ObjectId
    + image_id        : ObjectId
    + inference_id    : ObjectId
    + radiologist_id  : Integer
    + action          : Enum
    + final_finding   : String
    + clinical_notes  : String
    + validated_at    : DateTime
    --
    + validate(action: Enum) : void
    + addClinicalNotes(notes: String) : void
}

class Report {
    + id            : ObjectId
    + image_id      : ObjectId
    + diagnosis_id  : ObjectId
    + generated_by  : Integer
    + pdf_path      : String
    + generated_at  : DateTime
    --
    + generate(diagnosis: Diagnosis) : void
    + exportToPDF() : File
}

' ── Relationships ──
User           "1" -- "0..*" UserRole         : holds >
Role           "1" -- "0..*" UserRole         : is linked via >
Admin          "1" -- "0..*" UserRole         : assigns >
User           "1" -- "0..*" RadiologyImage   : uploads >
RadiologyImage "1" -- "0..1" AiPredictions  : produces >
RadiologyImage "1" -- "0..1" Diagnosis        : has >
AiPredictions "1" -- "1"   Diagnosis        : used in >
Diagnosis      "1" -- "0..1" Report           : generates >
User           "1" -- "0..*" Diagnosis        : validates >
User           "1" -- "0..*" Report           : generates >

@enduml
